manifests/auth1-policy.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: demo
spec:
  {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "book-viewer"
  namespace: demo
spec:
  selector:
    matchLabels:
      app: books
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
